--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,24 @@
-request
-matplotlib
-geopy
+basemap==1.4.1
+basemap-data==1.3.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
+contourpy==1.2.1
+cycler==0.12.1
+fonttools==4.51.0
+geographiclib==2.0
+geopy==2.4.1
+idna==3.7
+kiwisolver==1.4.5
+matplotlib==3.8.4
+numpy==1.26.4
+packaging==23.2
+pillow==10.3.0
+pyparsing==3.1.2
+pyproj==3.6.1
+pyshp==2.3.1
+python-dateutil==2.9.0.post0
+requests==2.31.0
+setuptools==68.2.2
+six==1.16.0
+urllib3==2.2.1
+wheel==0.41.2
