refreshed requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ fonttools==4.51.0
 geographiclib==2.0
 geopy==2.4.1
 idna==3.7
+keyboard==0.13.5
 kiwisolver==1.4.5
 matplotlib==3.8.4
 numpy==1.26.4
